test/corpus/copybook.txt
==================
copybook
==================
       01  HOSPITAL.
          03  HOSPNAME        PIC X(20).
          03  HOSP-ADDRESS      PIC X(30).
          03  HOSP-PHONE        PIC X(10).
          03  ADMIN         PIC X(20).
---
(start
  (data_description
    (level_number)
    (entry_name))
  (data_description
    (level_number)
    (entry_name)
    (picture_clause
      (picture_x)))
  (data_description
    (level_number)
    (entry_name)
    (picture_clause
      (picture_x)))
  (data_description
    (level_number)
    (entry_name)
    (picture_clause
      (picture_x)))
  (data_description
    (level_number)
    (entry_name)
    (picture_clause
      (picture_x))))
